--- a/data/cards/95477924.yaml
+++ b/data/cards/95477924.yaml
@@ -37,11 +37,19 @@ card_type: Spell
 property: Field
 images:
 - index: 1
+  image: MagiciansSalvation-LART-EN-UR-LE.png
+  illustration: MagiciansSalvation-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: MagiciansSalvation-MP21-EN-UR-1E.png
+  illustration: MagiciansSalvation-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: MP21-EN256
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Ultra Rare
+  - set_number: LART-EN060
+    set_name: The Lost Art Promotion 2023 G
     rarities:
     - Ultra Rare
   de:
@@ -49,9 +57,17 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: LART-DE060
+    set_name: The Lost Art Promotion 2023 G
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: MP21-FR256
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Ultra Rare
+  - set_number: LART-FR060
+    set_name: The Lost Art Promotion 2023 G
     rarities:
     - Ultra Rare
   it:
@@ -59,9 +75,17 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Ultra Rare
+  - set_number: LART-IT060
+    set_name: The Lost Art Promotion 2023 G
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: MP21-PT256
     set_name: 2021 Tin of Ancient Battles
+    rarities:
+    - Ultra Rare
+  - set_number: LART-PT060
+    set_name: The Lost Art Promotion 2023 G
     rarities:
     - Ultra Rare
   ja:
