--- a/data/cards/13510157.yaml
+++ b/data/cards/13510157.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 13510157
 name:
   en: Hound of the Tistina
   de:
@@ -66,5 +66,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 993294
-fake_password:
-- 101201087
