--- a/data/cards/59504256.yaml
+++ b/data/cards/59504256.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 59504256
 name:
   en: Demigod of the Tistina
   de:
@@ -71,5 +71,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 993295
-fake_password:
-- 101201088
