--- a/data/cards/08561192.yaml
+++ b/data/cards/08561192.yaml
@@ -47,7 +47,7 @@ attribute: EARTH
 level: 10
 atk: 3100
 def: 1900
-materials: 1 Tuner + 1+ non-Tuner monsters
+materials: 1 Tuner + 1 or more non-Tuner monsters
 images:
 - index: 1
   image: LeotheKeeperoftheSacredTree-LEHD-EN-C-1E.png
