--- a/data/cards/yugipedia993298.yaml
+++ b/data/cards/yugipedia993298.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Activate this card by targeting 1 face-up monster on the field; Special Summon this card as an Effect Monster (Aqua/LIGHT/Level 10/ATK 0 DEF 0) with the following effect (this card is also still a Trap).
+    Activate this card by targeting 1 face-up monster on the field; Special Summon this card as an Effect Monster (Aqua/LIGHT/Level 10/ATK 0/DEF 0) with the following effect (this card is also still a Trap).
     ● During your opponent's turn, when that target leaves the field, destroy this card. During your opponent's turn, when this card leaves the field, destroy that target.
   de:
   es:
@@ -30,6 +30,7 @@ card_type: Trap
 property: Continuous
 series:
 - Tistina
+- Trap Monster
 images:
 - index: 1
   image: SignsoftheTistina-DUNE-EN-C-1E.png
