--- a/data/cards/27132400.yaml
+++ b/data/cards/27132400.yaml
@@ -44,22 +44,27 @@ sets:
   - set_number: DUNE-EN009
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   de:
   - set_number: DUNE-DE009
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   fr:
   - set_number: DUNE-FR009
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   it:
   - set_number: DUNE-IT009
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   pt:
   - set_number: DUNE-PT009
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   ja:
   - set_number: DUNE-JP009
     set_name: Duelist Nexus
