--- a/data/cards/23746827.yaml
+++ b/data/cards/23746827.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     During the Main Phase, if a monster(s) you control leaves the field by an opponent's monster effect, except by being destroyed: Activate 1 of these effects;
     ● End the Main Phase.
-    ● Skip the Main Phase 1 of your opponent's next turn.
+    ● Skip Main Phase 1 of your opponent's next turn.
     You can only activate 1 "Million-Century Ice Prison" per turn.
   de:
   es:
