--- a/data/cards/50357013.yaml
+++ b/data/cards/50357013.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 十种神镜阵
 text:
   en: |-
-    Send monster(s) from your hand and/or face-up field to the GY whose total Levels equal 10; draw 2 cards
+    Send monster(s) from your hand and/or face-up field to the GY whose total Levels equal 10; draw 2 cards.
   de:
   es:
   fr:
