--- a/data/cards/78637313.yaml
+++ b/data/cards/78637313.yaml
@@ -8,7 +8,7 @@ name:
   it: Richiamo dell'Oscurità
   pt: Chamado das Trevas
   ja: <ruby>闇<rt>やみ</rt></ruby>からの<ruby>呼<rt>よ</rt></ruby>び<ruby>声<rt>ごえ</rt></ruby>
-  ja_romaji: Yami-kara no Yobigoe
+  ja_romaji: Yami kara no Yobigoe
   ko: 어둠에서 부르는 소리
   ko_rr:
   zh-TW:
