--- a/data/cards/84281045.yaml
+++ b/data/cards/84281045.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 群豪波动-主持阶段
 text:
   en: |-
-    Once per turn, if a card in the Monster Zone moves to another Monster Zone (except during the Damage Step): You can activate 1 of these effects.
+    Once per turn, if a card in the Monster Zone moves to another Monster Zone (except during the Damage Step): You can activate 1 of these effects;
     ● Level 5 or higher "Vaylantz" monsters you currently control gain 1200 ATK until the end of this turn.
     ● Send this face-up card from the Spell & Trap Zone to the GY, then target 1 Effect Monster in your opponent's Main Monster Zone; place that opponent's monster face-up as a Continuous Spell in their Spell & Trap Zone in its same column. (If the zone is occupied, destroy the occupying card.)
   de:
