--- a/data/cards/96352712.yaml
+++ b/data/cards/96352712.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     At the start of the Damage Step, if 2 monsters battle: Activate 1 of these effects;
     ● Change the attacking monster to Defense Position.
-    ● Return the attack target to the hand.
+    ● Return the attack target monster to the hand.
     ● Destroy both battling monsters.
     You can only activate 1 "Overexaggeration" per turn.
   de:
