--- a/data/cards/13836592.yaml
+++ b/data/cards/13836592.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 百战王 贝希摩斯
 text:
   en: |-
-    You can Tribute Summon this card with 1 Tribute. This card is unaffected by the activated effects of Special Summoned monsters if it was Normal Summoned/Set. If this card is Normal or Special Summoned: You can target 1 Beast, Beast-Warrior, or Winged Beast monster in your GY; add it to your hand, and if you do, this card loses 700 ATK. Once per turn, during your End Phase: You can make this card gain 700 ATK.
+    You can Tribute Summon this card by Tributing 1 monster. This card is unaffected by the activated effects of Special Summoned monsters if it was Normal Summoned/Set. If this card is Normal or Special Summoned: You can target 1 Beast, Beast-Warrior, or Winged Beast monster in your GY; add it to your hand, and if you do, this card loses 700 ATK. Once per turn, during your End Phase: You can make this card gain 700 ATK.
   de:
   es:
   fr:
