--- a/data/cards/49109013.yaml
+++ b/data/cards/49109013.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 魔星之乌鲁卡
 text:
   en: |-
-    When exactly 1 monster you control (and no other cards) leaves the field by an opponent's card effect (except during the Damage Step): You can banish this card from your hand or GY; if that monster is in the GY or banished face-up, Special Summon it, otherwise, Special Summon this banished card. If this card is Special Summoned: You can make this card gain 1500 ATK until the end of the next turn. You can only use each effect of "Doomstar Ulka" once per turn.
+    When exactly 1 monster you control (and no other monsters) leaves the field by an opponent's card effect (except during the Damage Step): You can banish this card from your hand or GY; if that monster is in the GY or banished face-up, Special Summon it, otherwise, Special Summon this banished card. If this card is Special Summoned: You can make this card gain 1500 ATK until the end of the next turn. You can only use each effect of "Doomstar Ulka" once per turn.
   de:
   es:
   fr:
