--- a/data/cards/63136489.yaml
+++ b/data/cards/63136489.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 合成兽融合
 text:
   en: |-
-    During the Main Phase: Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters from your hand or field as material, including a Beast or Fiend monster. During your Main Phase, if this card in your GY and you have "Chimera the Flying Mythical Beast" on your field or in your GY: You can activate 1 of these effects;
+    During the Main Phase: Fusion Summon 1 Fusion Monster from your Extra Deck, using monsters from your hand or field as material, including a Beast or Fiend monster. During your Main Phase, if this card is in your GY and you have "Chimera the Flying Mythical Beast" on your field or in your GY: You can activate 1 of these effects;
     ● Add this card to your hand.
     ● Banish this card, and if you do, Special Summon both 1 "Gazelle the King of Mythical Beasts" and 1 "Berfomet" from your Deck and/or GY.
     You can only use this effect of "Chimera Fusion" once per turn.
