--- a/data/cards/15237615.yaml
+++ b/data/cards/15237615.yaml
@@ -12,7 +12,7 @@ name:
   ko: 심판의 여왕
   ko_rr:
   zh-TW:
-  zh-CN: 下达裁决的女帝
+  zh-CN: 下裁决的女帝
 text:
   en: |-
     "Queen's Double" + "Hibikime"
@@ -32,7 +32,7 @@ text:
     "여왕의 무사" ＋ "음향녀"
   zh-TW:
   zh-CN: |-
-    「女王的影武者」＋「响女」。
+    "女王的影武者"＋"响女"
 card_type: Monster
 monster_type_line: Warrior / Fusion
 attribute: EARTH
@@ -111,6 +111,11 @@ sets:
     set_name: Metal Raiders
     rarities:
     - Common
+  zh-CN:
+  - set_number: FRP1-SCA28
+    set_name: Fusion Ready Pack A
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
