--- a/data/cards/16507828.yaml
+++ b/data/cards/16507828.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN: 腕龙
+  zh-CN: 腕龙雷德斯
 text:
   en: |-
     "Two-Headed King Rex" + "Crawling Dragon #2"
@@ -31,7 +31,7 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    「双头恐龙王」＋「贪尸龙」。
+    "双头恐龙王"＋"贪尸龙"
 card_type: Monster
 monster_type_line: Dinosaur / Fusion
 attribute: WATER
@@ -81,6 +81,11 @@ sets:
     set_name: Booster Chronicle
     rarities:
     - Common
+  zh-CN:
+  - set_number: FRP1-SC022
+    set_name: Fusion Ready Pack A
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
