--- a/data/cards/41396436.yaml
+++ b/data/cards/41396436.yaml
@@ -12,7 +12,7 @@ name:
   ko: 블루 윙
   ko_rr:
   zh-TW:
-  zh-CN: 苍翼冠鸟
+  zh-CN: 苍翼羽冠
 text:
   en: |-
     With hair shaped like a crown and a body encased in bluish white flames, this bird is a formidable sight.
@@ -32,7 +32,7 @@ text:
     왕관같은 머리의 벼슬이 청백색으로 타오르는 새.
   zh-TW:
   zh-CN: |-
-    青白色的火鸟，头上的毛有如皇冠。
+    头部的毛有如王冠，苍白燃烧的鸟。
 card_type: Monster
 monster_type_line: Winged Beast / Normal
 attribute: WIND
@@ -108,6 +108,11 @@ sets:
   ko:
   - set_number: MRD-K122
     set_name: Metal Raiders
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: FRP1-SCA14
+    set_name: Fusion Ready Pack A
     rarities:
     - Common
 limit_regulation:
