--- a/data/cards/44287299.yaml
+++ b/data/cards/44287299.yaml
@@ -12,7 +12,7 @@ name:
   ko: 전설의 검객 마사키
   ko_rr:
   zh-TW:
-  zh-CN: 传说的剑豪 正树
+  zh-CN: 传说之剑豪 MASAKI
 text:
   en: |-
     Legendary swordmaster Masaki is a veteran of over 100 battles.
@@ -32,7 +32,7 @@ text:
     혼자서 백명도 넘는 적을 베어 쓰러뜨렸다고 전해지는 전설의 검객.
   zh-TW:
   zh-CN: |-
-    据说是完成了百人斩的传说中的剑豪。
+    据传已达成百人斩的传说级剑豪。
 card_type: Monster
 monster_type_line: Warrior / Normal
 attribute: EARTH
@@ -180,6 +180,11 @@ sets:
     - Common
   - set_number: BP1-KR110
     set_name: Beginner's Edition 1
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: FRP1-SCA03
+    set_name: Fusion Ready Pack A
     rarities:
     - Common
 limit_regulation:
