--- a/data/cards/56907389.yaml
+++ b/data/cards/56907389.yaml
@@ -12,7 +12,7 @@ name:
   ko: 음악의 제왕
   ko_rr:
   zh-TW:
-  zh-CN: 音乐家帝王
+  zh-CN: 音乐家之帝王
 text:
   en: |-
     "Witch of the Black Forest" + "Lady of Faith"
@@ -32,7 +32,7 @@ text:
     "검은 숲의 마녀" ＋ "하이 프리스티스"
   zh-TW:
   zh-CN: |-
-    「黑森林的魔女」＋「高等女祭司」。
+    "黑森林女巫"＋"高等女祭司"
 card_type: Monster
 monster_type_line: Spellcaster / Fusion
 attribute: LIGHT
@@ -123,6 +123,11 @@ sets:
     set_name: Tournament Pack 2011 Vol.10
     rarities:
     - Common
+  zh-CN:
+  - set_number: FRP1-SCA19
+    set_name: Fusion Ready Pack A
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
