--- a/data/cards/94119974.yaml
+++ b/data/cards/94119974.yaml
@@ -32,7 +32,7 @@ text:
     공룡족 중에서는 강력한 카드. 두 개의 머리로 동시 공격.
   zh-TW:
   zh-CN: |-
-    恐龙族中的强力怪兽，两只头同时攻击。
+    恐龙族中属於强力的卡。以２个头同时攻击。
 card_type: Monster
 monster_type_line: Dinosaur / Normal
 attribute: EARTH
@@ -197,6 +197,15 @@ sets:
     - Common
   - set_number: SSD2-KR001
     set_name: Speed Start Deck Synchro Edition
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: FRP1-SCA23
+    set_name: Fusion Ready Pack A
+    rarities:
+    - Common
+  - set_number: FRP1-SCB20
+    set_name: Fusion Ready Pack B
     rarities:
     - Common
 limit_regulation:
