--- a/data/cards/95144193.yaml
+++ b/data/cards/95144193.yaml
@@ -12,7 +12,7 @@ name:
   ko: 헤라클레스 투구 벌레
   ko_rr:
   zh-TW:
-  zh-CN: 锹甲独角仙
+  zh-CN: 锹形海克力士
 text:
   en: |-
     "Kuwagata α" + "Hercules Beetle"
@@ -32,7 +32,7 @@ text:
     "투구 벌레 α" ＋ "헤라클레스 비틀"
   zh-TW:
   zh-CN: |-
-    「锹甲阿尔法」＋「大力独角仙」。
+    "锹甲阿尔法"＋"海克力士甲虫"
 card_type: Monster
 monster_type_line: Insect / Fusion
 attribute: EARTH
@@ -123,6 +123,11 @@ sets:
     set_name: Tournament Pack 2012 Vol.13
     rarities:
     - Common
+  zh-CN:
+  - set_number: FRP1-SCA25
+    set_name: Fusion Ready Pack A
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
