--- a/data/cards/95952802.yaml
+++ b/data/cards/95952802.yaml
@@ -32,7 +32,7 @@ text:
     "실버 팽" ＋ "마계의 가시나무"
   zh-TW:
   zh-CN: |-
-    「银牙狼」＋「魔界之棘」。
+    "银牙"＋"魔界的荆棘"
 card_type: Monster
 monster_type_line: Beast / Fusion
 attribute: EARTH
@@ -115,6 +115,11 @@ sets:
     set_name: Legend of Blue Eyes White Dragon
     rarities:
     - Rare
+  zh-CN:
+  - set_number: FRP1-SCA16
+    set_name: Fusion Ready Pack A
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
