--- a/data/cards/09293977.yaml
+++ b/data/cards/09293977.yaml
@@ -32,7 +32,7 @@ text:
     "강철의 거신상" ＋ "레서 드래곤"
   zh-TW:
   zh-CN: |-
-    「钢铁巨神像」＋「下级龙」。
+    "钢铁巨神像"＋"下级龙"
 card_type: Monster
 monster_type_line: Machine / Fusion
 attribute: WIND
@@ -119,6 +119,11 @@ sets:
     set_name: Legend of Blue Eyes White Dragon
     rarities:
     - Rare
+  zh-CN:
+  - set_number: FRP1-SCA10
+    set_name: Fusion Ready Pack A
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
