--- a/data/cards/17358176.yaml
+++ b/data/cards/17358176.yaml
@@ -32,7 +32,7 @@ text:
     들어 본 적 없는 주문을 외워 마음을 사악하게 물들인다.
   zh-TW:
   zh-CN: |-
-    咏唱起闻所未闻的咒语，使所有人的心平静下来。
+    吟唱闻所未闻的咒文，安抚狂乱的心灵。
 card_type: Monster
 monster_type_line: Spellcaster / Normal
 attribute: LIGHT
@@ -120,6 +120,11 @@ sets:
     - Common
   - set_number: TP10-KR005
     set_name: Tournament Pack 2011 Vol.10
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: FRP1-SCA21
+    set_name: Fusion Ready Pack A
     rarities:
     - Common
 limit_regulation:
