--- a/data/cards/29172562.yaml
+++ b/data/cards/29172562.yaml
@@ -32,7 +32,7 @@ text:
     기계의 나라에서 섬기는 강철의 거신상.
   zh-TW:
   zh-CN: |-
-    据域是被机械帝国所祭奠着的钢铁的巨神像。
+    祭于机械之国的钢铁巨神像。
 card_type: Monster
 monster_type_line: Machine / Normal
 attribute: EARTH
@@ -116,6 +116,11 @@ sets:
   ko:
   - set_number: LOB-K112
     set_name: Legend of Blue Eyes White Dragon
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: FRP1-SCA11
+    set_name: Fusion Ready Pack A
     rarities:
     - Common
 limit_regulation:
