--- a/data/cards/31339260.yaml
+++ b/data/cards/31339260.yaml
@@ -31,7 +31,7 @@ text:
   ko:
   zh-TW:
   zh-CN: |-
-    「白骨」＋「格斗战士 阿提米特」。
+    "白骨"＋"格斗战士 阿提米特"
 card_type: Monster
 monster_type_line: Zombie / Fusion
 attribute: DARK
@@ -77,6 +77,11 @@ sets:
     set_name: Tournament Pack 2010 Vol.4
     rarities:
     - Common
+  zh-CN:
+  - set_number: FRP1-SCA07
+    set_name: Fusion Ready Pack A
+    rarities:
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
