--- a/data/cards/32274490.yaml
+++ b/data/cards/32274490.yaml
@@ -32,7 +32,7 @@ text:
     어디에서나 출현하는 해골 요괴. 공격력은 약하지만 집단으로 모이면 큰 힘을 발휘한다.
   zh-TW:
   zh-CN: |-
-    到处出没的骸骨妖怪。攻击虽弱，聚集起来非同小可。
+    处处皆会出现的骸骨型妖怪。虽然攻击力很弱，一旦聚集却也十分棘手。
 card_type: Monster
 monster_type_line: Zombie / Normal
 attribute: DARK
@@ -228,6 +228,16 @@ sets:
     set_name: Advanced Event Pack 2021 Vol.1 Version 2
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: FRP1-SCA08
+    set_name: Fusion Ready Pack A
+    rarities:
+    - Common
+  - set_number: TM02-SC011
+    set_name: 'Theme Pack: Undead Rondo'
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
