--- a/data/cards/43500484.yaml
+++ b/data/cards/43500484.yaml
@@ -12,7 +12,7 @@ name:
   ko: 마계의 가시나무
   ko_rr:
   zh-TW:
-  zh-CN: 魔界之棘
+  zh-CN: 魔界的荆棘
 text:
   en: |-
     A thorny plant found in the darklands that wraps itself around any unwary traveler.
@@ -32,7 +32,7 @@ text:
     마계에 생식하는 가시나무. 함부로 그 앞을 통과하려는 자를 단번에 휘감아버린다.
   zh-TW:
   zh-CN: |-
-    栖息在魔界的有刺灌木，将硬闯的人牢牢缠住。
+    生存于魔界的荆棘。会缠住企图强行通过者。
 card_type: Monster
 monster_type_line: Plant / Normal
 attribute: EARTH
@@ -112,6 +112,11 @@ sets:
   ko:
   - set_number: LOB-K114
     set_name: Legend of Blue Eyes White Dragon
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: FRP1-SCA18
+    set_name: Fusion Ready Pack A
     rarities:
     - Common
 limit_regulation:
