--- a/data/cards/45231177.yaml
+++ b/data/cards/45231177.yaml
@@ -32,7 +32,7 @@ text:
     "화염의 조종자" ＋ "전설의 검객 마사키"
   zh-TW:
   zh-CN: |-
-    「火焰操纵者」＋「传说的剑豪 正树」。
+    "炎之操纵者"＋"传说之剑豪 MASAKI"
 card_type: Monster
 monster_type_line: Warrior / Fusion
 attribute: FIRE
@@ -267,6 +267,11 @@ sets:
     rarities:
     - Common
     - Millennium Rare
+  zh-CN:
+  - set_number: FRP1-SCA01
+    set_name: Fusion Pack Ready A
+    rarities:
+    - Super Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
