--- a/data/cards/52584282.yaml
+++ b/data/cards/52584282.yaml
@@ -12,7 +12,7 @@ name:
   ko: 헤라클레스 비틀
   ko_rr:
   zh-TW:
-  zh-CN: 大力独角仙
+  zh-CN: 海克力士甲虫
 text:
   en: |-
     A massive beetle with a tough carapace and a dangerous horn.
@@ -32,7 +32,7 @@ text:
     거대한 투구 벌레. 뿔 공격과 딱딱한 껍질 수비는 강력하다.
   zh-TW:
   zh-CN: |-
-    巨大的甲虫，锐利的角与坚硬的身体非常强力。
+    巨大的独角仙。其角的攻击和坚硬的身体的防守十分强力。
 card_type: Monster
 monster_type_line: Insect / Normal
 attribute: EARTH
@@ -112,6 +112,11 @@ sets:
     - Common
   - set_number: TP13-KR004
     set_name: Tournament Pack 2012 Vol.13
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: FRP1-SCA27
+    set_name: Fusion Ready Pack A
     rarities:
     - Common
 limit_regulation:
