--- a/data/cards/60802233.yaml
+++ b/data/cards/60802233.yaml
@@ -32,7 +32,7 @@ text:
     흉폭한 투구 벌레. 상대의 머리를 노리는 단두날에 주의.
   zh-TW:
   zh-CN: |-
-    凶暴的甲虫。它会瞄准对方的头瞬间斩落。
+    凶暴的锹形虫。要当心它瞄准对手头部的砍头攻击。
 card_type: Monster
 monster_type_line: Insect / Normal
 attribute: EARTH
@@ -112,6 +112,11 @@ sets:
     - Common
   - set_number: TP13-KR005
     set_name: Tournament Pack 2012 Vol.13
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: FRP1-SCA26
+    set_name: Fusion Ready Pack A
     rarities:
     - Common
 limit_regulation:
