--- a/data/cards/71466592.yaml
+++ b/data/cards/71466592.yaml
@@ -32,7 +32,7 @@ text:
     이 효과는 상대 턴밖에 사용할 수 없다. 상대가 마법 카드를 발동했을 때, 앞면 표시의 이 카드를 제물로 바치는 것으로, 마법 카드의 발동을 무효로 하여, 그것을 파괴한다.
   zh-TW:
   zh-CN: |-
-    对方把魔法卡发动时，可以通过把自己场上表侧表示存在的这张卡解放，那个发动无效并破坏。这个效果只能在对方回合发动。
+    ①：在对手回合中，对手发动魔法卡时，解放此卡可以发动。将该发动无效并破坏。
 card_type: Monster
 monster_type_line: Aqua / Effect
 attribute: WATER
@@ -132,6 +132,11 @@ sets:
     - Common
   - set_number: BP2-KR011
     set_name: Beginner's Edition 2
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: FRP1-SCA06
+    set_name: Fusion Ready Pack A
     rarities:
     - Common
 limit_regulation:
