--- a/data/cards/78010363.yaml
+++ b/data/cards/78010363.yaml
@@ -327,6 +327,10 @@ sets:
     set_name: Starter Deck 2021
     rarities:
     - Common
+  - set_number: FRP1-SCA20
+    set_name: Fusion Ready Pack A
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
