--- a/data/cards/86099788.yaml
+++ b/data/cards/86099788.yaml
@@ -40,8 +40,8 @@ text:
     이 카드가 특수 소환되었을 때, 다른 자신의 필드 위의 몬스터를 전부 파괴한다. 이 카드가 필드 위에 존재하는 한, 양쪽의 플레이어는 다른 몬스터를 일반 소환/반전 소환/특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    「暗黑英雄 尸魔侠」＋「魔力吸收球体」
-    这张卡特殊召唤成功时，这张卡以外的自己场上存在的怪兽全部破坏。只要这张卡在场上存在，双方不能把怪兽召唤·反转召唤·特殊召唤。
+    "暗黑英雄 尸魔侠"＋"魔力吸收球体"
+    ①：此卡特殊召唤成功的情况下发动。将此卡以外的自己场上的怪兽全部破坏。②：只要此卡存在于怪兽区域，双方不可召唤・反转召唤・特殊召唤怪兽。
 card_type: Monster
 monster_type_line: Warrior / Fusion / Effect
 attribute: EARTH
@@ -145,6 +145,11 @@ sets:
     set_name: Beginner's Edition 2
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: FRP1-SCA04
+    set_name: Fusion Ready Pack A
+    rarities:
+    - Super Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
