--- a/data/cards/88472456.yaml
+++ b/data/cards/88472456.yaml
@@ -32,7 +32,7 @@ text:
     이 카드는 플레이어에게 직접 공격할 수 없다. 이 카드가 전투에서 몬스터를 1장 파괴할 때마다, 이 카드의 공격력은 200 포인트 내린다.
   zh-TW:
   zh-CN: |-
-    每次这张卡战斗破坏怪兽，这张卡的攻击力下降200。这张卡不能向对方玩家直接攻击。
+    ①：此卡不可直接攻击。②：此卡战斗破坏怪兽的情况下发动。此卡的攻击力下降２００。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: DARK
@@ -229,6 +229,11 @@ sets:
     - Common
   - set_number: BP2-KR010
     set_name: Beginner's Edition 2
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: FRP1-SCA05
+    set_name: Fusion Ready Pack A
     rarities:
     - Common
 limit_regulation:
