--- a/data/cards/90357090.yaml
+++ b/data/cards/90357090.yaml
@@ -12,7 +12,7 @@ name:
   ko: 실버 팽
   ko_rr:
   zh-TW:
-  zh-CN: 银牙狼
+  zh-CN: 银牙
 text:
   en: |-
     A snow wolf that's beautiful to the eye, but absolutely vicious in battle.
@@ -32,7 +32,7 @@ text:
     은백색으로 빛나는 늑대. 겉모습은 근사하지만, 성격은 흉폭하다.
   zh-TW:
   zh-CN: |-
-    闪烁着银光的狼，看起来虽美丽，但性格却十分凶暴。
+    闪耀银白色光芒的狼。外观优美，但性情凶暴。
 card_type: Monster
 monster_type_line: Beast / Normal
 attribute: EARTH
@@ -205,6 +205,10 @@ sets:
     set_name: Advanced Tournament Pack 2014 Vol.1
     rarities:
     - Common
+  - set_number: SDY-012
+    set_name: 'Starter Deck: Yugi'
+    rarities:
+    - Common
   ko:
   - set_number: LOB-K010
     set_name: Legend of Blue Eyes White Dragon
@@ -216,6 +220,11 @@ sets:
     - Common
   - set_number: BP1-KR106
     set_name: Beginner's Edition 1
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: FRP1-SCA17
+    set_name: Fusion Ready Pack A
     rarities:
     - Common
 limit_regulation:
