--- a/data/rush/yugipedia993443.yaml
+++ b/data/rush/yugipedia993443.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の表側表示モンスター（炎族）が攻撃を受ける相手モンスターの攻撃宣言時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    その攻撃を無効にする。攻撃を受けるモンスターのレベルが攻撃してきたモンスターより高い場合、さらに攻撃してきたモンスターを破壊できる。
   ko:
   zh-TW:
   zh-CN:
