--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -1882,6 +1882,18 @@
   ko_rr: Eoteuraeksyeon
   zh-TW:
   zh-CN:
+- en: Veda
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: Apoqliphort
   de: Apoqliphort
   es: Apoqlifuerte
