--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -1882,6 +1882,18 @@ Attraction:
   ko_rr: Eoteuraeksyeon
   zh-TW:
   zh-CN:
+Veda:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 Apoqliphort:
   de: Apoqliphort
   es: Apoqlifuerte
