--- a/data/cards/36996508.yaml
+++ b/data/cards/36996508.yaml
@@ -31,7 +31,8 @@ text:
   ko: |-
     마법사 중에서 공격력 / 수비력이 동시에 가장 높은 계급.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    作为魔法使，攻击力・守备力均为最高级别。
 card_type: Monster
 monster_type_line: Spellcaster
 attribute: DARK
