--- a/data/cards/45231177.yaml
+++ b/data/cards/45231177.yaml
@@ -269,7 +269,7 @@ sets:
     - Millennium Rare
   zh-CN:
   - set_number: FRP1-SCA01
-    set_name: Fusion Pack Ready A
+    set_name: Fusion Ready Pack A
     rarities:
     - Super Parallel Rare
 limit_regulation:
