--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -1883,14 +1883,14 @@ Attraction:
   zh-TW:
   zh-CN:
 Veda:
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ja_romaji:
-  ko:
+  de: Veda
+  es: Vedas
+  fr: Veda
+  it: Veda
+  pt: Veda
+  ja: ヴェーダ
+  ja_romaji: Vēda
+  ko: 베다
   ko_rr:
   zh-TW:
   zh-CN:
