--- a/data/cards/yugipedia992984.yaml
+++ b/data/cards/yugipedia992984.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 5 monsters
-    Once per turn, you can also Xyz Summon "Xyz Armor Fortress" by using a Rank 3 or 4 Xyz Monster you control as material. (Transfer its materials to this card.) This card with material cannot be used as material for an Xyz Summon. Once per turn: You can detach up to 2 materials from this card; add the same number of "Armored Xyz" cards with different names from your Deck to your hand. Any battle damage your opponent takes from battles involving a monster equipped with this card is doubled.
+    Once per turn, you can also Xyz Summon "Xyz Armor Fortress" by using 1 Rank 3 or 4 Xyz Monster you control. (Transfer its materials to this card.) This card with material cannot be used as material for an Xyz Summon. Once per turn: You can detach up to 2 materials from this card; add the same number of "Armored Xyz" cards with different names from your Deck to your hand. If a monster equipped with this card battles another monster, any battle damage it inflicts to your opponent is doubled.
   de:
   es:
   fr:
