--- a/data/cards/yugipedia992985.yaml
+++ b/data/cards/yugipedia992985.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>ＦＡ<rt>フルアーマード</rt></ruby>－ダーク・ナイト・ランサー
-  ja_romaji: Furuāmādo - Dāku Naito Ransā
+  ja_romaji: Furu Āmādo - Dāku Naito Ransā
   ko:
   ko_rr:
   zh-TW:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3 Level 7 monsters
-    Once per turn, you can also Xyz Summon "Full Armored DARK Lancer" by using a Rank 5 or 6 Xyz Monster you control as material. (Transfer its materials to this card.) Gains 300 ATK for each material attached to it and each card equipped to it. Once per turn: You can target 1 "Xyz" card in your GY; add it to your hand. Once per turn, if an Equip Card(s) becomes equipped to a monster you control: You can attach 1 monster your opponent controls to this card as material.
+    Once per turn, you can also Xyz Summon "Full Armored DARK Lancer" by using 1 Rank 5 or 6 Xyz Monster you control. (Transfer its materials to this card.) Gains 300 ATK for each material attached to it and each card equipped to it. Once per turn: You can target 1 "Xyz" card in your GY; add it to your hand. Once per turn, if an Equip Card(s) becomes equipped to a monster you control: You can attach 1 monster your opponent controls to this card as material.
   de:
   es:
   fr:
