--- a/rush.yaml
+++ b/rush.yaml
@@ -106704,7 +106704,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手モンスターの攻撃宣言時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -106716,7 +106717,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    その攻撃を無効にする。このターン、相手は攻撃宣言できない。
   ko:
   zh-TW:
   zh-CN:
