--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -22,19 +22,28 @@
 - yugipedia: 371832
   fake_password: 10000090
 ## Prereleases
-# Duelist Nexus
-- set_abbreviation: DUNE
+# Age of Overlord
+- set_abbreviation: AGOV
   fake_password_range:
-    - 101201000
-# Duelist Pack: Duelists of Explosion
-- set_abbreviation: DP28
+    - 101202000
+# Phantom Nightmare
+- set_abbreviation: Phantom Nightmare
   fake_password_range:
-    - 100299000
-# Animation Chronicle 2023
-- set_abbreviation: AC03
+    - 101203000
+# Deck Build Pack: Valiant Smashers
+- set_abbreviation: DBVS
   fake_password_range:
-    - 101201000
-# Mystic Potato
-- yugipedia: 806659
-  fake_password: 100200235
-  
+    - 100433000
+# Structure Deck R: Onslaught of the Fire Kings
+- set_abbreviation: SR14
+  fake_password_range:
+    - 100314000
+# Brionac, the Dragon of Icy Malevolence
+- yugipedia: 986316
+  fake_password: 100200241
+# Flametongue the Blazing Magical Blade
+- yugipedia: 977106
+  fake_password: 100295701
+# Black Luster Soldier
+- yugipedia: 10276
+  fake_password: 511002613
