--- a/data/cards/35537860.yaml
+++ b/data/cards/35537860.yaml
@@ -1,7 +1,7 @@
 konami_id: 7692
 password: 35537860
 name:
-  en: Synchro Blast Wave
+  en: Synch Blast Wave
   de: Synchro-Druckwelle
   es: Ola de Choque de la Sincronía
   fr: Vague Mentale Fréquentielle
@@ -37,7 +37,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: SynchroBlastWave-LC5D-EN-C-1E.png
+  image: SynchBlastWave-OP22-EN-C-UE.png
 sets:
   en:
   - set_number: 5DS1-EN021
@@ -50,6 +50,10 @@ sets:
     - Super Rare
   - set_number: LC5D-EN250
     set_name: Legendary Collection 5D's Mega Pack
+    rarities:
+    - Common
+  - set_number: OP22-EN021
+    set_name: OTS Tournament Pack 22
     rarities:
     - Common
   de:
@@ -65,6 +69,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
+  - set_number: OP22-DE021
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   fr:
   - set_number: 5DS1-FR021
     set_name: "Starter Deck: Yu-Gi-Oh! 5D's"
@@ -76,6 +84,10 @@ sets:
     - Super Rare
   - set_number: LC5D-FR250
     set_name: Legendary Collection 5D's Mega Pack
+    rarities:
+    - Common
+  - set_number: OP22-FR021
+    set_name: OTS Tournament Pack 22
     rarities:
     - Common
   it:
@@ -91,9 +103,17 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
+  - set_number: OP22-IT021
+    set_name: OTS Tournament Pack 22
+    rarities:
+    - Common
   pt:
   - set_number: LC5D-PT250
     set_name: Legendary Collection 5D's Mega Pack
+    rarities:
+    - Common
+  - set_number: OP22-PT021
+    set_name: OTS Tournament Pack 22
     rarities:
     - Common
   ja:
